sources/CPP/include/Ers/ErsApiFunctions.h

// Temporary typedef until we found a good place for shared information.
typedef uint64_t EntityID;
    ERS_IMPORT void ERS_Logger_AddCallback(void(*logCallback)(int level, const char* message, void* callbackData), void* callbackData);
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterScriptBehavior(const char* name, void*(*CreateInstance)(void* handle), void* handle, void(*OnCreation)(void* scriptBehaviorInstance), void(*OnAwake)(void* scriptBehaviorInstance), void(*OnStart)(void* scriptBehaviorInstance), void(*OnUpdate)(void* scriptBehaviorInstance), void(*OnLateUpdate)(void* scriptBehaviorInstance), void(*OnDestroy)(void* scriptBehaviorInstance), void(*OnEntering)(void* scriptBehaviorInstance, EntityID child), void(*OnEntered)(void* scriptBehaviorInstance, EntityID child), void(*OnExiting)(void* scriptBehaviorInstance, EntityID child), void(*OnExited)(void* scriptBehaviorInstance, EntityID child), void(*OnInputChannelReady)(void* scriptBehaviorInstance, EntityID inputChannel), void(*OnOutputChannelReady)(void* scriptBehaviorInstance, EntityID outputChannel), void(*OnReceive)(void* scriptBehaviorInstance, EntityID inputChannel, EntityID child), void(*Serialization)(void* scriptBehaviorInstance, void* serializer), void(*OnSubModelMove)(void* scriptBehaviorInstance, EntityID newConnectedEntity));
    ERS_IMPORT EntityID ERS_ResourceComponent_GetInputChannel(void* instance, size_t index);
    ERS_IMPORT EntityID ERS_ResourceComponent_GetOutputChannel(void* instance, size_t index);
    ERS_IMPORT void ERS_ResourceComponent_CloseAllInput(void* instance);
    ERS_IMPORT void ERS_ResourceComponent_OpenAllInput(void* instance);
    ERS_IMPORT void ERS_ResourceComponent_CloseAllOutput(void* instance);
    ERS_IMPORT void ERS_ResourceComponent_OpenAllOutput(void* instance);
    ERS_IMPORT uint32_t ERS_TransformComponent_TypeId();
    ERS_IMPORT void ERS_TransformComponent_RegisterType(void* submodelInstance);
    ERS_IMPORT float ERS_TransformComponent_Position_X(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetPosition_X(void* instance, float x);
    ERS_IMPORT float ERS_TransformComponent_Position_Y(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetPosition_Y(void* instance, float y);
    ERS_IMPORT float ERS_TransformComponent_Position_Z(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetPosition_Z(void* instance, float z);
    ERS_IMPORT void ERS_TransformComponent_SetPosition(void* instance, float x, float y, float z);
    ERS_IMPORT float ERS_TransformComponent_Scale_X(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetScale_X(void* instance, float x);
    ERS_IMPORT float ERS_TransformComponent_Scale_Y(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetScale_Y(void* instance, float y);
    ERS_IMPORT float ERS_TransformComponent_Scale_Z(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetScale_Z(void* instance, float z);
    ERS_IMPORT void ERS_TransformComponent_SetScale(void* instance, float x, float y, float z);
    ERS_IMPORT float ERS_TransformComponent_Rotation_X(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetRotation_X(void* instance, float x);
    ERS_IMPORT float ERS_TransformComponent_Rotation_Y(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetRotation_Y(void* instance, float y);
    ERS_IMPORT float ERS_TransformComponent_Rotation_Z(void* instance);
    ERS_IMPORT void ERS_TransformComponent_SetRotation_Z(void* instance, float z);
    ERS_IMPORT void ERS_TransformComponent_Rotate_X(void* instance, float angle);
    ERS_IMPORT void ERS_TransformComponent_Rotate_Y(void* instance, float angle);
    ERS_IMPORT void ERS_TransformComponent_Rotate_Z(void* instance, float angle);
    ERS_IMPORT void ERS_TransformComponent_SetRotationEuler(void* instance, float x, float y, float z);
    ERS_IMPORT void ERS_TransformComponent_SetQuaternion(void* instance, float x, float y, float z, float w);
    ERS_IMPORT float ERS_TransformComponent_GlobalPosition_X(const void* instance);
    ERS_IMPORT float ERS_TransformComponent_GlobalPosition_Y(const void* instance);
    ERS_IMPORT float ERS_TransformComponent_GlobalPosition_Z(const void* instance);
    ERS_IMPORT float ERS_TransformComponent_GlobalScale_X(const void* instance);
    ERS_IMPORT float ERS_TransformComponent_GlobalScale_Y(const void* instance);
    ERS_IMPORT float ERS_TransformComponent_GlobalScale_Z(const void* instance);
    ERS_IMPORT float ERS_TransformComponent_GlobalRotation_X(const void* instance);
    ERS_IMPORT float ERS_TransformComponent_GlobalRotation_Y(const void* instance);
    ERS_IMPORT float ERS_TransformComponent_GlobalRotation_Z(const void* instance);
    ERS_IMPORT EntityID ERS_Entity_Invalid();
    ERS_IMPORT EntityID ERS_Entity_GetParent(EntityID currentEntity);
    ERS_IMPORT uint64_t ERS_Entity_GetChildCount(EntityID currentEntity);
    ERS_IMPORT EntityID ERS_Entity_GetFirstChild(EntityID currentEntity);
    ERS_IMPORT EntityID ERS_Entity_GetLastChild(EntityID currentEntity);
    ERS_IMPORT EntityID ERS_Entity_GetPreviousSibling(EntityID currentEntity);
    ERS_IMPORT EntityID ERS_Entity_GetNextSibling(EntityID currentEntity);
    ERS_IMPORT bool ERS_Entity_IsValid(EntityID currentEntity);
    ERS_IMPORT void* ERS_EventScheduler_RegisterLocalEventType(uint64_t typeIdentifier, void(*callback)(void* data), void(*destructor)(void* data), void(*serialize)(void* data, void* serializerHandle), void*(*allocator)(), const char* uniqueName, const char* sourceLibrary, size_t size, const char* filePath, int lineNumber);
    ERS_IMPORT void* ERS_EventScheduler_RegisterSyncEventType(uint64_t eventTypeIdentifier, void(*onSenderSideCallback)(), void(*onTargetSideCallback)(), void(*serializeData)(void* dataContext, void* serializerHandle), uint32_t dataBlockSize, const char* name, const char* sourceLibrary, const char* filePath, int lineNumber);
    ERS_IMPORT uint64_t ERS_EventScheduler_ScheduleLocalEvent(int priority, uint64_t delay, void* dataPtr, void* eventTypeInfo);
    ERS_IMPORT void ERS_EventScheduler_CancelEvent(uint64_t eventKey);
    ERS_IMPORT void ERS_EventScheduler_SetPromise(uint64_t promise, int32_t outgoingDependencyID);
    ERS_IMPORT void* ERS_EventScheduler_LastScheduledSyncEvent();
    ERS_IMPORT uint64_t ERS_EventScheduler_GetPromise(int32_t outgoingDependencyID);
    ERS_IMPORT void* ERS_EventScheduler_ScheduleSyncEvent(uint64_t delay, int32_t targetSimulatorId, void* syncEventTypeInfo);
    ERS_IMPORT uint32_t ERS_EventScheduler_ExchangeSyncEventForEventID(void* syncEvent);
    ERS_IMPORT void ERS_EventScheduler_DelayEvent(uint64_t key, uint64_t delayAmount);
    ERS_IMPORT void* ERS_EventScheduler_AllocLocalEvent(void* eventTypeInfo);
    ERS_IMPORT void ERS_EventScheduler_FreeLocalEvent(void* dataPtr, void* eventTypeInfo);
    ERS_IMPORT EntityID ERS_SubModel_Move_Entity_To(void* targetSubModel, void* sourceSubModel, EntityID sourceEntity);
    ERS_IMPORT EntityID ERS_SubModel_Entity_Create_Name_Parent(void* submodel, const char* entityName, EntityID parent);
    ERS_IMPORT void ERS_SubModel_AddSubModelContext(void* subModelHandle, uint32_t SubModelContextTypeIdx, const char* name, void* SubModelContextPtr, void(*destructor)(void* contextHandle));