sources/CSharp/src/ErsApiFunctions.cs


        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_ResourceComponent_GetInputChannel(IntPtr instance, nuint index);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_ResourceComponent_GetOutputChannel(IntPtr instance, nuint index);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ResourceComponent_CloseAllInput(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ResourceComponent_OpenAllInput(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ResourceComponent_CloseAllOutput(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ResourceComponent_OpenAllOutput(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_TransformComponent_TypeId();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_RegisterType(IntPtr submodelInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Position_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetPosition_X(IntPtr instance, float x);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Position_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetPosition_Y(IntPtr instance, float y);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Position_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetPosition_Z(IntPtr instance, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetPosition(IntPtr instance, float x, float y, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Scale_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetScale_X(IntPtr instance, float x);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Scale_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetScale_Y(IntPtr instance, float y);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Scale_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetScale_Z(IntPtr instance, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetScale(IntPtr instance, float x, float y, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Rotation_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetRotation_X(IntPtr instance, float x);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Rotation_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetRotation_Y(IntPtr instance, float y);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_Rotation_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetRotation_Z(IntPtr instance, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_Rotate_X(IntPtr instance, float angle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_Rotate_Y(IntPtr instance, float angle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_Rotate_Z(IntPtr instance, float angle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetRotationEuler(IntPtr instance, float x, float y, float z);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformComponent_SetQuaternion(IntPtr instance, float x, float y, float z, float w);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalPosition_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalPosition_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalPosition_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalScale_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalScale_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalScale_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalRotation_X(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalRotation_Y(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern float ERS_TransformComponent_GlobalRotation_Z(IntPtr instance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_Entity_Invalid();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_Entity_GetParent(Entity currentEntity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 ERS_Entity_GetChildCount(Entity currentEntity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_Entity_GetFirstChild(Entity currentEntity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_Entity_GetLastChild(Entity currentEntity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_Entity_GetPreviousSibling(Entity currentEntity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_Entity_GetNextSibling(Entity currentEntity);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_Entity_IsValid(Entity currentEntity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_EventScheduler_RegisterLocalEventType(UInt64 typeIdentifier, delegate* unmanaged[Cdecl]<IntPtr, void> callback, delegate* unmanaged[Cdecl]<IntPtr, void> destructor, delegate* unmanaged[Cdecl]<IntPtr, IntPtr, void> serialize, delegate* unmanaged[Cdecl]<IntPtr> allocator, /* ASCII String */ byte* uniqueName, /* ASCII String */ byte* sourceLibrary, nuint size, /* ASCII String */ byte* filePath, int lineNumber);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_EventScheduler_RegisterSyncEventType(UInt64 eventTypeIdentifier, delegate* unmanaged[Cdecl]<void> onSenderSideCallback, delegate* unmanaged[Cdecl]<void> onTargetSideCallback, delegate* unmanaged[Cdecl]<IntPtr, IntPtr, void> serializeData, UInt32 dataBlockSize, /* ASCII String */ byte* name, /* ASCII String */ byte* sourceLibrary, /* ASCII String */ byte* filePath, int lineNumber);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 ERS_EventScheduler_ScheduleLocalEvent(int priority, UInt64 delay, IntPtr dataPtr, IntPtr eventTypeInfo);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventScheduler_CancelEvent(UInt64 eventKey);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventScheduler_SetPromise(UInt64 promise, Int32 outgoingDependencyID);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_EventScheduler_LastScheduledSyncEvent();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 ERS_EventScheduler_GetPromise(Int32 outgoingDependencyID);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_EventScheduler_ScheduleSyncEvent(UInt64 delay, Int32 targetSimulatorId, IntPtr syncEventTypeInfo);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_EventScheduler_ExchangeSyncEventForEventID(IntPtr syncEvent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventScheduler_DelayEvent(UInt64 key, UInt64 delayAmount);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_EventScheduler_AllocLocalEvent(IntPtr eventTypeInfo);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventScheduler_FreeLocalEvent(IntPtr dataPtr, IntPtr eventTypeInfo);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_SubModel_Move_Entity_To(IntPtr targetSubModel, IntPtr sourceSubModel, Entity sourceEntity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe Entity ERS_SubModel_Entity_Create_Name_Parent(IntPtr submodel, /* ASCII String */ byte* entityName, Entity parent);
